--- a/Content-based-filtering-and-Recommender-system.ipynb
+++ b/Content-based-filtering-and-Recommender-system.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Content Based Filtering and Recommender System"
+    "# Recommender System: Content Based Filtering"
    ]
   },
   {
